--- a/content/post/2018-09-18-anshijian2.md
+++ b/content/post/2018-09-18-anshijian2.md
@@ -1,12 +1,14 @@
 ---
-layout: post
-title: "读刘未鹏的《暗时间》第二篇"
-categories:
-- 读书笔记
-tags: 
-- 《暗时间》
-- 文摘
+title: 读刘未鹏的《暗时间》第二篇
+author: Xinlu Wang
+date: '2018-09-18'
+slug: test-post
+categories: []
+tags:
+    - 《暗时间》
+    - 文摘
 ---
+
 
 ### 思维改变生活 
 
