--- a/content/post/2015-07-02-sapiens.md
+++ b/content/post/2015-07-02-sapiens.md
@@ -1,13 +1,10 @@
 ---
 layout: post
 title: "《Sapiens: A Brief History of Humankind》读书笔记"
+date: 2015-07-02
 categories:
 - 读书笔记
 tags: 
-- "人类简史"
-- Yuval Noah Harari
-- Happiness 
-- 文摘
 ---
 
 The state and the market approached people with an offer that could not be refused. 'Become individuals,' they said. 'Marry whomever you desire, without asking permission from your parents. Take up whatever job suits you, even if community elders frown. Live wherever you wish, even if you cannot make it every week to the family dinner. You are no longer dependent on your family or your community. We, the state and the market, will take care of you instead. We will provide food, shelter, education, health, welfare and employment. We will provide pensions, insurance and protection.'
