--- a/content/post/2016-05-17-peoplein20s.md
+++ b/content/post/2016-05-17-peoplein20s.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "People should learn in their 20s - Rich Tatum"
+date: 2016-05-07
 categories:
-- 文摘
 ---
 
 From [Rich Tatum](https://www.quora.com/What-are-the-most-difficult-and-useful-things-people-have-to-learn-in-their-20s)
