--- a/content/post/2015-01-12-anshijian3.md
+++ b/content/post/2015-01-12-anshijian3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "读刘未鹏的《暗时间》第三篇"
+title: "读刘未鹏的《暗时间》"
 date: 2015-01-12
 categories:
 - 读书笔记
@@ -8,6 +8,109 @@ tags:
 - 《暗时间》
 - 文摘
 ---
+
+
+最近读刘未鹏的《暗时间》有些感触。刘未鹏在书中将人的大脑比作CPU，对时间安排，处理任务等进行了一些阐述。我总结了一下：
+
+### How to use your time more efficiently
+
+-  Time is one dimension, and intensity is the other--The output is equal to Time  **X** Intensity. 
+
+> 运行空闲进程也是一天，运行大数据量计算的程序也是一天，对于CPU来说同样的一天，价值却是完全不一样的。善于利用思维时间的人，可以无形中比别人多出很多时间
+
+- Stop multitasking. 
+
+> 任务切换需要耗费许多额外的花销，通俗地来讲，首先需要保存当前上下文以便下次能够顺利切换回来，然后要加载目标任务的上下文。如果一个系统不停地在多个任务之间来回倒腾，就会耗费大量的时间在上下文切换上，无形中浪费很多的时间。   
+> 
+> 大脑开始一件任务的时候必须要有一定时间来“热身”，这个时间因人而异，并且可以通过练习来改变。
+
+For example. you can concentrate on researh during the working days, and leave other unimportant stuffs to the weekend. By doing so, you can reduce the switching cost, thus improving the efficency of your time.
+
+- How quick you can enter into the stage of **Flow**, and How long you can stay in it.
+
+>我总是倾向于创造大块的时间来阅读重要的东西，因为这样有利于“沉浸”进去，使得新知识可以和大脑中与其相关的各种既有的知识充分融合，关联起来，后者对于深刻的记忆非常有帮助。
+
+- Use **progress bar** to encourage yourself. Split large task into several small ones, and finish them one by one.    
+- 番茄时间管理法 and TODO List. 
+  
+The progress bar can ease your anxiety because it set expectations for you, and inform you of where you are.
+
+### How to memorize stuffs
+
+- Conect the new knowledge with the existing one. The more connections you can find, the more likely you will recall it when you need to. 
+- Knit your net. 
+
+>你所拥有的知识并不取决于你记得多少，而在于它们能否在恰当的时候被回忆起来。
+
+- organize the new knowledge periodically. Otherwise, if you cannot remember it, you never learn it.
+
+- [《书写是为了更好的思考》](http://mindhacks.cn/2009/02/09/writing-is-better-thinking/)
+
+> writing is consious, using your reasoning to influence yourself. Thinking is sort of the uncousious you.
+
+### Others
+ 
+> 看书挑剔，只看经典。如何选择经典，可以到网上做做功课，看看评价，综合分析一下
+
+- 要经常复习过去的知识。比如自己看到很多writing的tips，If you cannot recall them when writing, you cannot improve your writing. You have wasted your time collecting these tips.
+
+How to avoid **anxiety**
+
+- write down your anxiety and analyze it
+- read a interesting story, filling your brain with the amazing characters and leaving no space for anxiety.
+
+> 用别的东西充满工作记忆，其他的神经活动自然会被抑制（神经科学基本事实）。所以，感到焦虑的时候不妨思考吧，甚至完全可以去理性分析和思考导致焦虑的问题本身，将其拆解，分析来源，在不知不觉中，大脑的工作重心就从情绪模块转向了推理模块了，而且这思考也可能顺带更有效地解决了导致焦虑的问题呢:)
+
+Be a professional.
+
+> 靠专业技能的成功是最具可复制性的。它需要的只是你在一个领域坚持不懈地专注下去，只需要选择一个不算太不靠谱的方向，然后专心致志的专下去，最后必然能成为高手或者绝顶高手。
+
+
+### 思维改变生活 
+
+- Things you heard, you forget; things you experienced, you remember.
+
+> 亲身经历一个负性事件带来的情绪记忆要比看着或听说别人遭受一个同样的事件所感受到的强烈得多，形成的负性条件反射也远远更持久。
+>
+> There is no **感同身受**.    
+> 
+>A few lines of reasoning can change the way we see the world. 
+
+**People underestimate how much they can endure the misery.** 
+
+Scientific research has indicated that, however severe pain you are suffering now, it will have little impact on how happy you are six months later. Therefore, never buy insurance. Enjoy life now, and explore the world.
+
+> 读书并没有让我得到什么，但它让我知道有一些东西我是不需要的。
+
+### 书写是为了更好的思考
+
+> - 书写是对思维的备忘：人在思考一个问题的时候，就像是在黑暗中打着电筒往前走，每一步推导都将我们往前挪一小步，然而电筒的光亮能照到的范围是有限的，我们走了几步发现后面又黑了，想到后面就忘了前面的，想到某个分支上去就忘了另一个分支，我们常常想着想着就想岔了，想岔了也就罢了，问题是一旦想岔了太远，就很难回到当初岔开的地方了。有时候，我们是如此努力地试图一下就走出很远，同时又老是怕忘记目前已经取得的进展和重要结论，结果意识的微光就在一个很小的范围内打转，始终无法往前走出很远。而将思维过程记录下来，则给了我们完全的回溯自己的思维轨迹的可能。 
+> - 书写是对思维的缓存。正因为我们的工作记忆有限，所以我们在头脑中思考问题的时候就往往只能将几个最重要的核心概念保持在工作记忆中，导致想来想去在一个有限的范围内打转，思维总是走不太远。
+> - 书写是与自己的对话：在书写的时候，你不断地观察自笔端流出的信息，一行文字被你写下来之后，你就不用再将其费力地保持在大脑的临时记忆中，因为这行黑底白字会不断主动地通过视觉刺激来提醒你它的存在，于是你就可以将空出来的思维精力用于反思你自己的观点。
+
+### The advantage of keeping blogging.
+
+- 书写是为了更好的思考
+- “教”是最好的“学”
+- 激励你去持续学习和思考
+- 一个长期的价值博客是一份很好的简历
+- 只做你最感兴趣的事情，钱会随之而来
+
+>Much of intelligence is knowledge.
+>
+>Much of Will is Skill.
+>
+>Overnight success takes a long time.
+
+俗语云“公说公有理，婆说婆有理。”你敢于表达自己的观点，他说你喜欢炫耀。你韬光养晦呢，他又说你夹着尾巴做人；你为自己的成就骄傲一下，他说你得意忘形。你低调做人呢，他又说你怎么这么没种；你说彪悍的人生不需要解释，他说你自大狂。你说做人贵有自知之明呢，他又说你丫做人怎恁费劲捏？…
+
+### 什么才是你的不可替代性和核心竞争力
+
+> **专业领域技能**：成为一个专业领域的专家，你的专业技能越强，在这个领域的不可替代性就越高。这个自是不用多说的。
+> 
+>**跨领域的技能**：解决问题的能力，创新思维，判断与决策能力，Critical-Thinking，表达沟通能力，Open Mind 等等。
+
+
 
 ### 跟波利亚学解题
 
